--- a/client/src/app/checkout/checkout.component.scss
+++ b/client/src/app/checkout/checkout.component.scss
@@ -4,34 +4,37 @@
     font-family: 'Oswald', sans-serif; 
     font-weight: 700; 
     letter-spacing: 4px;
-    color: olivedrab;
     width: 85vw; 
+    color: olivedrab;
+    padding: 1.5rem 0 1.5rem 0.75rem;
+    background: rgb(235, 235, 235);
+    box-shadow: 0 0 1px;
 }
-.checkout-title > hr { height: 2px; }
+.checkout-title > hr { height: 2px; margin: 0; }
 
 .order-summary {
     padding: 0.75rem 0;
-    margin: 10vh auto 8vh auto;
+    margin: 6vh auto 3vh auto;
     grid-template-columns: 25% 50%;
     column-gap: 2rem;
+    font-family: 'Playfair Display', serif;
     min-height: 8rem;
     width: 85vw;
-    background: rgb(235, 235, 235);
+    background: white;
     border: 1px solid rgb(224, 224, 224);
     border-radius: 0.075rem;
-    box-shadow: 0 1px 3px;
+    box-shadow: 0 1px 2px rgb(77, 77, 77);
     animation: scrollLeft 0.3s ease-in forwards;
 }
 
 .order-summary > h1 {
     font-size: clamp(1.75rem, 2.5vw, 2.5rem);
-    font-weight: 500;
     font-family: 'Playfair Display', serif;
+    font-weight: 500;
     color: olivedrab;
 }
 
 .order-cost > div {
-    font-family: 'Playfair Display', serif;
     justify-content: center;
     font-size: clamp(1rem, 2.5vw, 1.125rem);
     color: rgb(88, 88, 88);
@@ -66,10 +69,9 @@ hr { margin: 0.5rem 0; grid-column: 1 / 3; width: 100%; }
 .checkout-input > button:hover { box-shadow: 0 0 4px darkorange; }
 
 @media (max-width: 50rem) { 
-    .order-summary { margin: 3rem auto 2.5rem auto; }
-    .order-summary > h1, .order-cost { grid-column: 1 / 3; } 
+    .order-summary { margin: 2.5rem auto; }
+    .order-summary > h1 { grid-column: 1 / 3; margin: 0; }
+    .order-cost { grid-column: 1 / 3; } 
     .checkout-input { grid-template-columns: 100%; padding: 0; margin-bottom: 20vh; width: 85vw; background: unset; border: 0; }
     app-cart, app-map, .checkout-input > button { grid-column: 1 / 3; }
-    app-cart { margin-top: 2vh; }
-    app-map { margin-top: 2.5vh; }
 }
