--- a/client/src/app/item-list/item-list.component.scss
+++ b/client/src/app/item-list/item-list.component.scss
@@ -1,7 +1,6 @@
 .item-list {
     grid-template-columns: 15% 75%;
-    row-gap: 4rem;
-    padding: 10vh 0;
+    padding: 5vh 0;
     margin-bottom: 40vh;
     width: 100vw;
     background: rgb(235, 235, 235);
@@ -15,12 +14,16 @@
     font-weight: 500; 
     height: fit-content;
     letter-spacing: 4px; 
+    padding: 1.5rem 0 1.5rem 0.75rem;
+    background: rgb(247, 247, 247);
+    box-shadow: 0 0 1px;
 }
+hr { margin: 0; }
 
 .item-filter {
     grid-column: 1 / 2;
     row-gap: 1.5vh;
-    padding: 12% 0 15% 0;
+    padding: 5vh 0;
     height: fit-content;
     flex-direction: column;
     background: white;
@@ -172,7 +175,7 @@ app-pagination { grid-column: 1 / 5; margin: 0 auto; }
 }
 
 @media (max-width: 50rem) {
-    .item-list { grid-template-columns: 22% 68%; row-gap: 2.5rem; }
+    .item-list { grid-template-columns: 22% 68%; }
     .list-title { grid-column: 1 / 3; margin: 0; font-weight: 600; }
     .item-filter { grid-column: 1 / 2; }
     .container { margin-left: 0; }
@@ -188,7 +191,7 @@ app-pagination { grid-column: 1 / 5; margin: 0 auto; }
 @media (max-width: 25rem) {
     .item-list { grid-template-columns: 90%; }
     .list-title { grid-column: 1 / 2; }
-    .item-filter { display: grid; grid-template-columns: 45% 45%; column-gap: 0; }
+    .item-filter { display: grid; grid-template-columns: 45% 45%; column-gap: 0; padding: 3vh 0; }
     .container { margin-left: 17.5%;  }
     .item > img { grid-column: 1 / 3; }
     .item-label { grid-column: 1 / 3; margin: 0; height: 18vh; }
