--- a/client/src/app/map/map.component.scss
+++ b/client/src/app/map/map.component.scss
@@ -54,9 +54,8 @@ form > div > input::placeholder { font-weight: normal; letter-spacing: 0 !import
 
 .map > form > button {
     grid-column: 1 / 3; 
-    float: right; 
-    margin: 2vh 0 0 auto;
-    padding: 0.75vh 1vw;
+    margin-top: 3vh;
+    padding: 0.75vh 1.5vw;
     font-size: clamp(0.875rem, 1vw, 1rem); 
     font-weight: 500; 
     letter-spacing: 1px;
